--- a/web/default/package.json
+++ b/web/default/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && rm -rf ../build/default && mv -f build ../build/default",
+    "build:win": "react-scripts build && powershell -Command \"Remove-Item -Recurse -Force -ErrorAction SilentlyContinue ../build/default; Move-Item -Force build ../build/default\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
